# wordhunt-solver

./: .gitignore  Cargo.toml  README.md  planning.md
benches/: stage1_evaluation_benchmark.rs  stage1_vector_bench.rs
src/: board.rs  combination_search.rs  combination_search_old.rs  letter.rs  letter_combination.rs  lib.rs  main.rs  utilities.rs
src/combination_search/: bounding_functions.rs  combination_generator.rs  generator.rs  progress_information.rs  progress_statistics.rs  snapshot.rs  worker.rs
src/utilities/: snapshot_utilities.rs  test_utilities.rs
tests/: test_letter_combinations  test_trie_fail.txt  wordlist.txt
