[package]
name = "wordhunt-solver"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
bincode = "1.3.3"
crossbeam = "0.8.4"
crossbeam-deque = "0.8.6"
crossbeam-utils = "0.8.21"
louds-rs = "0.7.0"
once_cell = "1.20.2"
serde = { version = "1.0.217", features = ["derive"] }
trie-rs = "0.4.2"
