[package]
name = "wordhunt-solver"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]
bincode = "1.3.3"
crossbeam = "0.8.4"
crossbeam-deque = "0.8.6"
crossbeam-utils = "0.8.21"
ctrlc = { version = "3.4.6", features = ["termination"] }
louds-rs = "0.7.0"
once_cell = "1.20.2"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
trie-rs = "0.4.2"

[dev-dependencies]
cargo-llvm-cov = "0.6.16"
criterion = { version = "0.4", features = ["html_reports"]}

[[bench]]
name = "stage1_evaluation_benchmark"
harness = false
